# urban-octo-barnacle

./: CHANGELOG.md  LICENSE  README.md  urban-octo-barnacle.cabal
.stack-work/ghci/d787806b/: cabal_macros.h
.stack-work/ghci/e0547d99/: cabal_macros.h
.stack-work/install/x86_64-linux/2e1d42408a65991f53ea066c66018e2ca002f07a2e119c317ff9e239a018629f/8.6.3/lib/x86_64-linux-ghc-8.6.3/urban-octo-barnacle-0.0.0-8qKCtIIX2lr9XJRxSzUMI6/: Prelude.dyn_hi  Prelude.hi  Types.dyn_hi  UrbanOctoBarnacle.hi
.stack-work/install/x86_64-linux/2e1d42408a65991f53ea066c66018e2ca002f07a2e119c317ff9e239a018629f/8.6.3/pkgdb/: package.cache  urban-octo-barnacle-0.0.0-8qKCtIIX2lr9XJRxSzUMI6.conf
app/: Main.hs
src/: CrazyTypes.hs  Prelude.hs  Types.hs  UrbanOctoBarnacle.hs
